--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ certifi==2020.12.5
 chardet==4.0.0
 idna==2.10
 lxml==4.6.2
+msgpack==0.6.1
+multitasking==0.0.9
 numpy==1.19.5
 pandas==1.2.1
 pandas-datareader==0.9.0
@@ -10,3 +12,5 @@ pytz==2020.5
 requests==2.25.1
 six==1.15.0
 urllib3==1.26.2
+urllib3==1.25.11
+yfinance==0.1.55
